submit button tweak

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -110,8 +110,8 @@
               {% csrf_token %}
               {{ form.as_p }}
 
-<input type="submit" class="btn btn-primary btn-info"><span class="glyphicon glyphicon-envelope"></span> Submit</a>
-</form>
+              <input type="submit" class="btn btn-primary btn-info" />
+            </form>
         </section>
 
     </div>
@@ -119,13 +119,13 @@
 
     <footer class="container-fluid">
         <div class="row">
-            <div class="social-button">
-            <a class="btn" href="">
-                <i class="fa fa-facebook-square fa-2x"></i>
-                <i class="fa fa-twitter-square fa-2x"></i>
-                <i class="fa fa-linkedin-square fa-2x"></i>
-            </a>
-        </div>
+          <div class="social-button">
+          <a class="btn" href="">
+              <i class="fa fa-facebook-square fa-2x"></i>
+              <i class="fa fa-twitter-square fa-2x"></i>
+              <i class="fa fa-linkedin-square fa-2x"></i>
+          </a>
+          </div>
         </div>
     </footer>
 
